# hash-predef

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  azure-pipelines.yml  build.jam  conandata.yml  conanfile.py  index.adoc  index.html  jamroot.jam  predef.css  project-root.jam
.github/workflows/: conan.yml
cmake/: HashInstall.cmake
doc/: build.jam  hardware_simd.qbk  history.adoc  history.qbk  index.html  predef.adoc  predef.qbk  todo.adoc
hash_predef/1.14-alpha/: latest.json
hash_predef/1.14-alpha/a08d7e1a807a121d787bed0cfc505c1a/: snapshot.json
include/: predef.h
include/predef/: architecture.h  compiler.h  hardware.h  language.h  library.h  make.h  os.h  other.h  platform.h  version.h  version_number.h
include/predef/architecture/: alpha.h  arm.h  blackfin.h  convex.h  e2k.h  ia64.h  loongarch.h  m68k.h  mips.h  parisc.h  ppc.h  ptx.h  pyramid.h  riscv.h  rs6k.h  sparc.h  superh.h  sys370.h  sys390.h  x86.h  z.h
include/predef/compiler/: borland.h  clang.h  comeau.h  compaq.h  diab.h  digitalmars.h  dignus.h  edg.h  ekopath.h  gcc.h  gcc_xml.h  greenhills.h  iar.h  (+18 more)
src/media/: logo-large-light-with-shadow.xcf  logo.odg
test/: build.jam  check_value.cpp  macos_endian.c  macos_vs_bsd.c  make.cpp  platform_windows.cpp  predef_info.h  tested_at.cpp  tested_at_outdated.cpp  version.cpp  workaround.cpp  workaround_strict_config.cpp
test/test_cmake/: CMakeLists.txt  main.cpp
tools/: convert.py
tools/check/: predef.jam  predef_check.h  predef_check_cc.h
tools/ci/: build_log.py  common.py  library_test.py  linux-cxx-install.sh
(+65 files in other folders)
